# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: ci.yml
page_analyzer/: app.py  config.py  data.py  db.py  services.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/includes/: flash.html  nav.html
page_analyzer/templates/urls/: detail.html  list.html
